--- a/package.json
+++ b/package.json
@@ -1,16 +1,29 @@
 {
-  "author": "Uzi Kilon",
-  "name": "Todos",
-  "version": "0.0.1",
-  "homepage": "http://todos.kilon.org/",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/uzikilon/Todos.git"
-  },
-  "devDependencies": {
-    "almond" : ">= 0.2.0",
-    "requirejs" : ">= 2.1.0",
-    "less" : ">= 1.3.0",
-    "jshint" : "= 0.8.0"
-  }
+    "author": "Uzi Kilon",
+    "name": "Todos",
+    "version": "0.0.1",
+    "homepage": "http://todos.kilon.org/",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/uzikilon/Todos.git"
+    },
+    "devDependencies": {
+        "almond": ">= 0.2.0",
+        "babel-core": "^6.26.3",
+        "babel-loader": "^6.0.1",
+        "babel-plugin-transform-object-rest-spread": "^6.26.0",
+        "babel-polyfill": "^6.26.0",
+        "babel-preset-env": "^1.7.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-es2015-without-strict": "0.0.4",
+        "jshint": "= 0.8.0",
+        "less": ">= 1.3.0",
+        "requirejs": ">= 2.1.0",
+        "underscore": "^1.10.2",
+        "webpack": "^1.15.0",
+        "webpack-dev-server": "^1.16.5"
+    },
+    "scripts": {
+        "start": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js"
+    }
 }
